--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
         </p>
         <p class="copyright">
           <span>
-            © 2017 <a href="https://github.com/Heeveloper">Heeveloper</a>. All rights reserved.
+            © 2017 <a href="https://github.com/Heeveloper/">Heeveloper</a>. All rights reserved.
           </span>
         </p>
         <p class="power">
