--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -36,9 +36,9 @@
         .description {
             display: inline-block;
         }
-        .copywrite{
+        .copyright{
           a{
-            color: #8F90C5;
+            color: #8F90C9;
             transition: 0.3s ease;
             &:hover {
                 color: #fff;
