--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -103,6 +103,7 @@
             bottom: 190px;
         }
         .side {
+            margin-bottom: 15px;
             box-sizing: border-box;
             background-color: #f8f8fd;
             box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.3), 0 0 30px rgba(10, 10, 0, 0.1) inset;
