사이드 광고 제거

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -86,9 +86,9 @@ layout: default
                     <li><a href="#comments">Comments</a></li>
                 </ul>
             </div>
-            <div class="side ad">
+            <!-- <div class="side ad">
                 {% include adsense_display.html %}
-            </div>
+            </div> -->
             <!-- 其他div框放到这里 -->
             <!-- <div class="side">bbbb</div> -->
         </div>
